--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   extract-transform-load:
     runs-on: ubuntu-latest
     env: 
-      PG_CONN_STRING: ${{ secrets.PG_CONN_STRING }}
+      PG_CONN_STRING: postgresql://SDahirSalman_demo_db_connection:37UmC_mvRKMxTiPFpszmANYZrDNkT@db.bit.io
       BITDOTIO_USER: SDahirSalman
       BITDOTIO_REPO: coviddata
     steps:
