--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,23 +19,23 @@ jobs:
           python-version: '3.9.1'
       - name: Install dependencies
         run: python -m pip install --upgrade pip -r venv/requirements.txt
-      - name: ACS population by county
+      - name: Stackoverflow Post Questions
         run: |
              python venv/main.py \
-             -local_source \
-             -name acs_population_counties \
-             venv/acs_5yr_population_data.csv \
-             $BITDOTIO_USER/$BITDOTIO_REPO.population
-      - name: NYT cases by county
+             -big_query \
+             -name from_big_query \
+             {stackoverflow posts questions url} \
+             $BITDOTIO_USER/$BITDOTIO_REPO.posts_questions
+      - name: Stackoverflow Posts Answers 
         run: |
              python venv/main.py \
-             -local_source \
-             -name nyt_cases_counties \
-             venv/trial.csv \
-             $BITDOTIO_USER/$BITDOTIO_REPO.covidcases
-      - name: Create CA report table
+             -big_query \
+             -name from_big_query \
+             {stackoverflow answers url} \
+             $BITDOTIO_USER/$BITDOTIO_REPO.posts_answers 
+      - name: Number of Questions Answered by Users related to BigQuery Topic
         run: |
-             python venv/sql_executor.py \
+             python venv/users_answer.py \
              venv/ca_covid_data.sql \
              $BITDOTIO_USER \
              $BITDOTIO_REPO
